Fix: Add overflow: hidden to the right side of page

--- a/src/styles/views/_nft-drops.less
+++ b/src/styles/views/_nft-drops.less
@@ -41,6 +41,8 @@
 
       &.order-of-liberty {
         .side.right {
+          overflow: hidden;
+
           picture {
             display: block;
             width: 100%;
